--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 20
         targetSdkVersion 23
         versionCode 1
-        versionName "2022_SEASON_PRE"
+        versionName "2023_SEASON_DEV"
     }
 
     compileOptions {
@@ -53,6 +53,8 @@ dependencies {
     // Other libraries
     compile 'com.couchbase.lite:couchbase-lite-android:1.3.1'
     compile 'com.google.code.gson:gson:2.7'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 
 }
