Revert "conflict fix"
This reverts commit 85bacea8cfdd79fbc5c23f158d47b7dddf2156a4.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 20
         targetSdkVersion 23
         versionCode 1
-        versionName "2024_SEASON_FINAL"
+        versionName "2024_SEASON_STJOE2"
     }
 
     compileOptions {
